<resources>
    <string name="app_name">VoChat</string>
    <string name="dialog_hint_new_name">new name</string>
    <string name="search">Search</string>
    <string name="button_add_contacts">Add Contacts</string>
    <string name="label_avatar">Avatar</string>
    <string name="label_phone">Phone</string>
    <string name="label_name">Name</string>
    <string name="label_gender">Gender</string>
    <string name="label_status">Status</string>
    <string name="user_default_status">hello vochat!</string>
    <string name="label_about">About</string>
    <string name="button_logout">Logout</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="label_create_account">Create Account</string>
    <string name="button_register">Register</string>
    <string name="voice_cancel">Cancel</string>
    <string name="voice_accept">Accept</string>

</resources>
