<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/linearLayout3">


    <TextView
            android:text="@string/label_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/avatar_iv"
            app:layout_constraintBottom_toBottomOf="@+id/avatar_iv" android:textSize="18sp"
            android:textColor="#000000"/>
    <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp" app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/avatar_iv" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#ebebeb"
            android:id="@+id/view" android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/label_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view" android:textSize="18sp" android:textColor="#000000"/>
    <TextView
            tools:text="18028501530"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_tv" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintBottom_toBottomOf="@+id/textView2" android:textSize="18sp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#ebebeb"
            android:id="@+id/view2" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textSize="18sp"
            android:textColor="#000000"/>
    <TextView
            tools:text="apon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:id="@+id/name_tv" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toTopOf="@+id/textView4" app:layout_constraintBottom_toBottomOf="@+id/textView4"
            android:textSize="18sp"/>
    <View
            android:layout_width="0dp"
            android:background="#ebebeb"
            android:layout_height="1dp"
            android:id="@+id/view3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/label_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/view3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:textSize="18sp" android:textColor="#000000"/>
    <TextView
            tools:text="male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sex_tv"
            app:layout_constraintTop_toTopOf="@+id/textView6" app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:textSize="18sp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#ebebeb"
            android:id="@+id/view4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/label_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textSize="18sp"
            android:textColor="#000000"/>
    <TextView
            android:text="@string/user_default_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signa_tv"
            app:layout_constraintTop_toTopOf="@+id/textView8" app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:textSize="18sp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#ebebeb"
            android:id="@+id/view5" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:text="@string/label_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/view5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            android:textSize="18sp" android:textColor="#000000"/>
    <TextView
            android:text="@string/button_logout"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:id="@+id/logout_bt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:textColor="#ffffff"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
