<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="#ffffff">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp" app:srcCompat="@drawable/login_logo"
            android:id="@+id/imageView2"
            android:adjustViewBounds="true" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp"/>
    <EditText
            android:hint="@string/hint_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneEditText"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
    />
    <EditText
            android:hint="@string/hint_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordEditText"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="@string/button_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:id="@+id/registerButton"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
