<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent" android:id="@+id/linearLayout7">

    <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp" app:srcCompat="@mipmap/ic_launcher_round"
            android:id="@+id/avatarIV"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            tools:text="apon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topNameTV" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/avatarIV" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="24sp" android:textColor="#000000"/>
    <TextView
            android:text="@string/label_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/topNameTV" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textSize="18sp"
            android:textColor="#000000"/>
    <TextView
            tools:text="18028501530"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phoneTV"
            app:layout_constraintTop_toTopOf="@+id/textView5" app:layout_constraintBottom_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#ebebeb"
            android:id="@+id/view6" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view6" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textSize="18sp"
            android:textColor="#000000"/>
    <TextView
            tools:text="apon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTV"
            app:layout_constraintTop_toTopOf="@+id/textView9" app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#ebebeb"
            android:id="@+id/view7" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <TextView
            android:text="@string/label_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/view7" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:textSize="18sp"
            android:textColor="#000000"/>
    <TextView
            tools:text="Hello VoChat!"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signedTV"
            app:layout_constraintTop_toTopOf="@+id/textView12"
            app:layout_constraintBottom_toBottomOf="@+id/textView12" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#ebebeb"
            android:id="@+id/view8" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView12" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <Button
            android:text="Add Contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/okBT" android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/view8" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:background="@color/colorPrimary" android:textColor="#ffffff"/>
</androidx.constraintlayout.widget.ConstraintLayout>
